Fertig zur Anzeige
Das ist das Grundgerüst um die Webseite richtig darzustellen

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-hallo welt
+<html>
+	<body>
+		<div id="container" > </div>
+		<script src="sketch.js"> </script>
+		<script src="particle.js"> </script>
+	</body>
+</html>
